# buaa-api

./: .gitignore  Cargo.toml  Readme.md  ReadmeCN.md
examples/: aas.rs  app.rs  boya.rs  class.rs  cloud.rs  live.rs  spoc.rs  srs.rs  sso.rs  tes.rs  wifi.rs
src/: api.rs  cell.rs  consts.rs  context.rs  error.rs  exports.rs  gw.rs  lib.rs  request.rs  session.rs  sso.rs  uc.rs  utils.rs
src/api/: app.rs  boya.rs  bykc.rs  class.rs  gw.rs  iclass.rs  mod.rs  office.rs  spoc.rs  sso.rs  uc.rs  user.rs  vpn.rs  wifi.rs
src/api/aas/: auth.rs  core.rs  data.rs  mod.rs  opt.rs
src/api/app/: auth.rs  core.rs  data.rs  mod.rs  opt.rs
src/api/boya/: auth.rs  core.rs  data.rs  mod.rs  opt.rs  opt_course.rs  query.rs  query_course.rs  query_selected.rs  query_statistic.rs  universal.rs  universal_request.rs  util.rs  utils.rs
src/api/class/: auth.rs  core.rs  data.rs  mod.rs  opt.rs  utils.rs
src/api/cloud/: auth.rs  core.rs  data.rs  download.rs  mod.rs  opt.rs  universal.rs
src/api/elective/: auth.rs  filter.rs  mod.rs  opt.rs  opt_course.rs  query_course.rs  query_selected.rs  utils.rs
src/api/evaluation/: data_struct.rs  mod.rs  opt.rs  utils.rs
src/api/live/: core.rs  data.rs  mod.rs  opt.rs
src/api/pan/: auth.rs  mod.rs  opt.rs
src/api/spoc/: auth.rs  core.rs  data.rs  get_schedule.rs  mod.rs  opt.rs  universal.rs  universal_request.rs  utils.rs
src/api/srs/: auth.rs  core.rs  data.rs  mod.rs  opt.rs  utils.rs
src/api/sso/: auth.rs  mod.rs
src/api/tes/: auth.rs  data.rs  mod.rs  (+2 more)
src/crypto/: aes.rs  biguint.rs  byte2hex.rs  crc.rs  des.rs  hash.rs  light_hash.rs  md5.rs  mod.rs  rand.rs  rsa.rs  sha1.rs  test.rs  xencode.rs
src/store/: cookies.rs  cred.rs  mod.rs
src/tests/: api.rs  crypto.rs  mod.rs
src/utils/: blocking.rs  byte2hex.rs  env.rs  get_wifi.rs  info.js  md5.js  mod.rs  parse.rs  path.rs  sha1.js  str.rs  table.rs  time.rs  wifi.rs  wrap_api.rs
wrap_api/: Cargo.toml
wrap_api/src/: lib.rs
(+7 files in other folders)
