[package]
name = "buaa_api"
version = "0.1.0"
authors = ["Fontlos <fontlos@fontlos.com>"]
edition = "2024"
readme = "Readme.md"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
futures = "0.3.31"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["cookies", "form", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = "0.3.45"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros"] }

[features]
default = []
multipart = ["reqwest/multipart"]
