[package]
name = "buaa_api"
version = "0.1.0"
authors = ["Fontlos <fontlos@fontlos.com>"]
edition = "2024"
readme = "Readme.md"

[dependencies]
base64 = "0.22"
bytes = "1"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.13", features = ["cookies", "form", "json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", default-features = false, features = ["rt"]}

[dev-dependencies]
logforth = { version = "0.29", features = ["starter-log"] }
tokio = { version = "1", default-features = false, features = ["macros"] }

[features]
default = []
multipart = ["reqwest/multipart"]
